Fix dark mode syntax highlighting colors

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -78,16 +78,68 @@
   .social-media-list a[data-brand="#00A1D6"]:hover { color: #00A1D6; }
   .social-media-list a[data-brand="#FFA500"]:hover { color: #FFA500; }
 
-  .highlight {
-    background-color: #2a2a3e;
-  }
-
   code {
     background-color: #2a2a3e;
+    color: #e0e0e0;
   }
 
-  .gist {
-    background-color: #2a2a3e;
+  .highlight {
+    background-color: #1e1e2e;
+
+    .c     { color: #6c7086 } // Comment
+    .err   { color: #f38ba8; background-color: transparent }
+    .k     { color: #cba6f7 } // Keyword
+    .o     { color: #89dceb } // Operator
+    .cm    { color: #6c7086; font-style: italic }
+    .cp    { color: #f9e2af; font-weight: bold }
+    .c1    { color: #6c7086; font-style: italic }
+    .cs    { color: #6c7086; font-weight: bold; font-style: italic }
+    .gd    { color: #f38ba8; background-color: rgba(243,139,168,0.1) }
+    .gi    { color: #a6e3a1; background-color: rgba(166,227,161,0.1) }
+    .go    { color: #6c7086 }
+    .gp    { color: #cba6f7; font-weight: bold }
+    .gs    { font-weight: bold }
+    .gu    { color: #6c7086 }
+    .gt    { color: #f38ba8 }
+    .kc    { color: #89b4fa } // Keyword.Constant
+    .kd    { color: #cba6f7 } // Keyword.Declaration
+    .kp    { color: #cba6f7 } // Keyword.Pseudo
+    .kr    { color: #cba6f7 } // Keyword.Reserved
+    .kt    { color: #89dceb } // Keyword.Type
+    .m     { color: #fab387 } // Literal.Number
+    .s     { color: #a6e3a1 } // Literal.String
+    .na    { color: #89dceb } // Name.Attribute
+    .nb    { color: #f9e2af } // Name.Builtin
+    .nc    { color: #f9e2af; font-weight: bold } // Name.Class
+    .no    { color: #89dceb } // Name.Constant
+    .ni    { color: #cba6f7 } // Name.Entity
+    .ne    { color: #f38ba8; font-weight: bold } // Name.Exception
+    .nf    { color: #89b4fa; font-weight: bold } // Name.Function
+    .nn    { color: #6c7086 } // Name.Namespace
+    .nt    { color: #f38ba8 } // Name.Tag
+    .nv    { color: #89dceb } // Name.Variable
+    .ow    { color: #89dceb; font-weight: bold }
+    .w     { color: #585b70 }
+    .mf    { color: #fab387 }
+    .mh    { color: #fab387 }
+    .mi    { color: #fab387 }
+    .mo    { color: #fab387 }
+    .sb    { color: #a6e3a1 }
+    .sc    { color: #a6e3a1 }
+    .sd    { color: #a6e3a1 }
+    .s2    { color: #a6e3a1 }
+    .se    { color: #f9e2af }
+    .sh    { color: #a6e3a1 }
+    .si    { color: #a6e3a1 }
+    .sx    { color: #a6e3a1 }
+    .sr    { color: #a6e3a1 }
+    .s1    { color: #a6e3a1 }
+    .ss    { color: #f5c2e7 }
+    .bp    { color: #f9e2af }
+    .vc    { color: #89dceb }
+    .vg    { color: #89dceb }
+    .vi    { color: #89dceb }
+    .il    { color: #fab387 }
   }
 
   blockquote {
